--- a/src/styles/Sign.module.css
+++ b/src/styles/Sign.module.css
@@ -1,16 +1,26 @@
 .root {
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
-  padding: 0 1rem;
-  margin: 1rem auto;
+  gap: 4.8rem;
+  padding: 0 1.6rem;
+  margin: 16rem auto 0;
   max-width: 40rem;
+
+  @media (max-width: 768px) {
+    margin-top: 8rem;
+  }
 }
 
 .form {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
+}
+
+.logoLink {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .notice {
