--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
   --white: #fff;
   --black: #333;
   --primary: #f8f8f8;
+  --primary-text: #c89b51;
   --error: #d6173a;
 
   --brown-20: #c89b51;
