--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,15 +4,11 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 2.4rem 4.8rem;
+  padding: 1.6rem 2.4rem;
 
   background: var(--white);
 
   @media (max-width: 768px) {
-    padding: 1.6rem 3.2rem;
-  }
-
-  @media (max-width: 420px) {
     padding: 1.6rem;
   }
 }
@@ -23,6 +19,7 @@
   padding: 0;
   background: none;
   flex: 1;
+  font-size: 2.4rem;
 
   @media (max-width: 768px) {
     display: block;
@@ -37,19 +34,20 @@
 
 .signLink {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.8rem;
   font-size: 1.6rem;
   letter-spacing: -1px;
   font-weight: 600;
   color: var(--black);
+
+  @media (max-width: 420px) {
+    gap: 0.4rem;
+    font-size: 1.2rem;
+  }
 }
 
 .logo {
-  width: 7.5rem;
-  height: 3.2rem;
-
-  @media (max-width: 768px) {
-    width: 6rem;
-    height: 2.55rem;
-  }
+  color: var(--brown-90);
+  width: 6.7rem;
+  height: 2.4rem;
 }
