--- a/src/components/header/HeaderProfileImage.module.css
+++ b/src/components/header/HeaderProfileImage.module.css
@@ -1,16 +1,21 @@
 .root {
-  width: 4.8rem;
-  height: 4.8rem;
+  width: 3.2rem;
+  height: 3.2rem;
+  font-size: 3.2rem;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   & img {
     object-fit: cover;
   }
 
   @media (max-width: 768px) {
-    width: 3.2rem;
-    height: 3.2rem;
+    width: 2.4rem;
+    height: 2.4rem;
   }
 }
