--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,8 @@
   --brown-70: #44341b;
   --brown-90: #3d2f18;
 
+  --gray-10: #f5f5f5;
+  --gray-20: #f0f0f0;
   --gray-30: #d9d9d9;
   --gray-50: #838383;
 }
