--- a/src/components/modal/BookSearch/BookSearchModal.module.css
+++ b/src/components/modal/BookSearch/BookSearchModal.module.css
@@ -21,7 +21,7 @@
 }
 
 .bookSearchSize {
-  height: 35rem;
+  height: 55rem;
 
   @media (max-width: 420px) {
     height: 100%;
@@ -50,8 +50,9 @@
   position: relative;
   border-radius: 0.5rem;
   overflow: hidden;
-  width: calc(9.6rem * 1.5);
-  height: calc(14.4rem * 1.5);
+  flex: 0 0 9.6rem;
+  width: 9.6rem;
+  height: 14.4rem;
 
   & img {
     object-fit: cover;
@@ -71,6 +72,12 @@
   word-spacing: 0.1rem;
   font-size: 2.5rem;
   font-weight: 700;
+
+  width: 23.4rem;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .detailInfoAuthor {
@@ -82,4 +89,14 @@
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 140%;
+
+  letter-spacing: -0.1rem;
+  word-spacing: 0.1rem;
+
+  display: -webkit-box;
+  word-wrap: break-word;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
