--- a/src/components/report/Report.module.css
+++ b/src/components/report/Report.module.css
@@ -61,10 +61,14 @@
   gap: 1rem;
   justify-content: center;
   align-items: center;
-}
 
-.icons svg {
-  cursor: pointer;
-  font-size: 1.4rem;
-  color: var(--white);
+  & button {
+    width: 1.4rem;
+
+    & svg {
+      cursor: pointer;
+      font-size: 1.4rem;
+      color: var(--white);
+    }
+  }
 }
