--- a/src/components/modal/BookSearch/BookSearchModal.module.css
+++ b/src/components/modal/BookSearch/BookSearchModal.module.css
@@ -33,6 +33,7 @@
 
   scrollbar-width: none;
   display: flex;
+  width: 100%;
 
   flex-direction: column;
   gap: 1rem;
@@ -61,6 +62,7 @@
 
 .detailInfo {
   flex: 1;
+  overflow: hidden;
 
   & hr {
     margin: 1.2rem 0;
@@ -73,11 +75,8 @@
   font-size: 2.5rem;
   font-weight: 700;
 
-  width: 23.4rem;
-
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .detailInfoAuthor {
