--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,4 @@
 :root {
-  font-size: 62.5%;
   --white: #fff;
   --black: #333;
   --primary: #f8f8f8;
@@ -18,6 +17,15 @@
   --gray-50: #838383;
 }
 
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/PretendardVariable.woff2") format("woff2");
+  display: swap;
+  font-weight: 45 920;
+}
+
 html {
+  font-family: "Pretendard", sans-serif;
   background-color: var(--primary);
+  font-size: 62.5%;
 }
