feat : 이미지 인풋 컴포넌트 구현

--- a/src/components/header/HeaderProfileImage.module.css
+++ b/src/components/header/HeaderProfileImage.module.css
@@ -1,11 +1,16 @@
 .root {
+  position: relative;
+}
+
+.button {
   width: 3.2rem;
   height: 3.2rem;
   font-size: 3.2rem;
   border-radius: 50%;
   overflow: hidden;
-  position: relative;
+  border: 1px solid var(--gray-20);
 
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
