--- a/src/components/forms/ImageInput.module.css
+++ b/src/components/forms/ImageInput.module.css
@@ -6,7 +6,14 @@
   background-position: center;
   background-repeat: no-repeat;
 
+  width: 100%;
+  height: 100%;
+
   border-radius: 1.2rem;
+
+  & input {
+    display: none;
+  }
 
   & .hoverCover {
     width: 100%;
