--- a/src/components/glassyBackground/GlassyBackground.module.css
+++ b/src/components/glassyBackground/GlassyBackground.module.css
@@ -1,13 +1,27 @@
 .root {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
+
+.defaultHeight {
+  height: 28rem;
+}
+
+.root img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .blur {
+  position: absolute;
+  top: 0;
+  width: 100%;
   backdrop-filter: blur(1rem);
-  background-color: rgba(0, 0, 0, 0.4);
-  height: 28rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
   padding: 1.6rem;
   gap: 5rem;
 }
