--- a/src/components/popUp/PopUp.module.css
+++ b/src/components/popUp/PopUp.module.css
@@ -1,5 +1,6 @@
 .root {
   position: absolute;
+  z-index: 1;
   top: 3rem;
   width: max-content;
   background-color: var(--white);
@@ -12,7 +13,7 @@
   gap: 0.4rem;
   flex-direction: column;
 
-  & button {
+  & :is(button, a) {
     font-size: 1.2rem;
     font-weight: 500;
     padding: 0.4rem;
