--- a/src/components/report/Report.module.css
+++ b/src/components/report/Report.module.css
@@ -15,6 +15,10 @@
   padding-top: 10rem;
   line-height: 1.8;
   white-space: pre-wrap;
+
+  & * {
+    font-family: Pretendard;
+  }
 }
 
 .icons {
@@ -23,7 +27,7 @@
   justify-content: center;
   align-items: center;
 
-  & button {
+  & :is(button, a) {
     width: 1.4rem;
 
     & svg {
