--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -34,15 +34,22 @@
 
 .signLink {
   display: flex;
+  height: 3.2rem;
   gap: 0.8rem;
   font-size: 1.6rem;
   letter-spacing: -1px;
   font-weight: 600;
+  align-items: center;
   color: var(--black);
+
+  @media (max-width: 768px) {
+    height: 2.4rem;
+  }
 
   @media (max-width: 420px) {
     gap: 0.4rem;
     font-size: 1.2rem;
+    height: 2.4rem;
   }
 }
 
