--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,9 @@
   --gray-20: #f0f0f0;
   --gray-30: #d9d9d9;
   --gray-50: #838383;
+
+  --pink-20: #f77576;
+  --pink-40: #f14b4c;
 }
 
 @font-face {
