--- a/src/components/sideMenu/SideMenu.module.css
+++ b/src/components/sideMenu/SideMenu.module.css
@@ -42,10 +42,11 @@
   display: none;
   border: none;
   background: none;
+  font-size: 2.55rem;
 
   @media (max-width: 768px) {
     display: block;
-    padding: 1.6rem 3.2rem;
+    padding: 1.6rem;
   }
 
   @media (max-width: 420px) {
