--- a/src/components/dashboard/DashboardHeader.module.css
+++ b/src/components/dashboard/DashboardHeader.module.css
@@ -15,6 +15,7 @@
 .profileImage {
   position: relative;
   overflow: hidden;
+  display: block;
   border-radius: 50%;
   width: 15rem;
   height: 15rem;
@@ -22,6 +23,11 @@
 
   & > img {
     object-fit: cover;
+  }
+
+  & > div {
+    width: 15rem;
+    height: 15rem;
   }
 }
 
@@ -54,6 +60,11 @@
     width: 10rem;
     height: 10rem;
     flex: 0 0 10rem;
+
+    & > div {
+      width: 10rem;
+      height: 10rem;
+    }
   }
 
   .nickname {
