--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,5 +1,7 @@
 .root {
   display: flex;
+  position: sticky;
+  top: 0;
   border-bottom: 1px solid var(--gray-30);
   flex-direction: row;
   justify-content: space-between;
