feat : 페이지 이동시 최상단으로 안 올라가는 문제 해결

--- a/src/components/layoutWrapper/LayoutWrapper.module.css
+++ b/src/components/layoutWrapper/LayoutWrapper.module.css
@@ -1,15 +1,11 @@
-.root {
-  display: flex;
+.main {
+  padding: 0;
+  width: calc(100vw - 22rem);
+  margin-left: auto;
+  margin-top: 6.5rem;
 
-  & > main {
-    padding: 0;
-    overflow: scroll;
-    height: calc(100vh - 65px);
-    flex: 1;
-    scrollbar-width: none;
-
-    @media (max-width: 768px) {
-      height: calc(100vh - 57px);
-    }
+  @media (max-width: 768px) {
+    width: 100vw;
+    margin-top: 5.7rem;
   }
 }
