--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,4 +39,5 @@ html {
   font-family: "Pretendard", sans-serif;
   background-color: var(--primary);
   font-size: 62.5%;
+  color: var(--black);
 }
