--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,6 +1,8 @@
 .root {
   display: flex;
-  position: sticky;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
   top: 0;
   border-bottom: 1px solid var(--gray-30);
   flex-direction: row;
