--- a/src/components/sideMenu/SideMenu.module.css
+++ b/src/components/sideMenu/SideMenu.module.css
@@ -1,5 +1,7 @@
 .root {
   width: 22rem;
+  position: fixed;
+  top: 6.5rem;
   height: calc(100dvh - 64px);
   flex: 0 0 22rem;
   background: var(--white);
