--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -1,10 +1,10 @@
 .root {
   max-width: 1096px;
   width: 100%;
-  margin: 5rem auto 0;
-  padding: 1.6rem 2.4rem;
+  margin: 0 auto 0;
+  padding: 5.6rem 2.4rem 1.6rem;
 
   display: flex;
   flex-direction: column;
-  gap: 6rem;
+  gap: 2rem;
 }
