--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -1,8 +1,8 @@
 .root {
   max-width: 1096px;
   width: 100%;
-  margin: 5rem auto 0;
-  padding: 1.6rem 2.4rem;
+  margin: 0 auto;
+  padding: 5.6rem 2.4rem 1.6rem;
 
   display: flex;
   flex-direction: column;
