--- a/src/components/card/CardReport.module.css
+++ b/src/components/card/CardReport.module.css
@@ -5,14 +5,14 @@
   display: flex;
   flex-direction: column;
 
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
   border-radius: 1.2rem;
 
   &:hover {
     cursor: pointer;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0px 7px 14px rgba(0, 0, 0, 0.25), 0px 8px 8px rgba(0, 0, 0, 0.22);
   }
 }
 
