design: svg 컬러 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,10 @@ html {
   color: var(--black);
 }
 
+svg {
+  color: var(--black);
+}
+
 .slick-prev:before,
 .slick-next:before {
   color: var(--brown-70);
