--- a/src/components/clickable/Clickable.module.css
+++ b/src/components/clickable/Clickable.module.css
@@ -29,7 +29,7 @@
 
 .like {
   border: 1px solid var(--pink-20);
-  color: var(black);
+  color: var(--black);
 
   & svg {
     color: var(--pink-40);
