--- a/src/components/clickable/Clickable.module.css
+++ b/src/components/clickable/Clickable.module.css
@@ -8,6 +8,35 @@
   text-align: center;
 }
 
+
+/* size */
+.small {
+  font-size: 1.2rem;
+  gap: 0.4rem;
+  padding: 0.8rem 1.2rem;
+}
+
+.medium {
+  font-size: 1.6rem;
+  gap: 0.8rem;
+  padding: 1.25rem 1.6rem;
+}
+
+.large {
+  font-size: 2rem;
+  gap: 1.2rem;
+  padding: 1.6rem 2rem;
+}
+
+.doubleButton {
+  display: flex;
+  gap: 0.8rem;
+
+  & button {
+    flex: 1;
+  }
+}
+
 /* color */
 
 .primary {
@@ -35,30 +64,11 @@
   }
 }
 
-/* size */
-.small {
-  font-size: 1.2rem;
-  gap: 0.4rem;
-  padding: 0.8rem 1.2rem;
-}
+.borderless {
+  padding: 0;
+  border: 0;
 
-.medium {
-  font-size: 1.6rem;
-  gap: 0.8rem;
-  padding: 1.25rem 1.6rem;
-}
-
-.large {
-  font-size: 2rem;
-  gap: 1.2rem;
-  padding: 1.6rem 2rem;
-}
-
-.doubleButton {
-  display: flex;
-  gap: 0.8rem;
-
-  & button {
-    flex: 1;
+  &:hover{
+    color: var(--brown-40);
   }
 }
