--- a/src/components/comment/CommentBox.module.css
+++ b/src/components/comment/CommentBox.module.css
@@ -2,11 +2,17 @@
   display: flex;
   align-items: flex-start;
   font-size: 1.4rem;
+  gap: 1rem;
 }
 
-.image { position: relative; height: 4rem; width: 4rem; flex: 0 0 4rem; }
+.nickname {
+  font-weight: bold;
+  font-size: 1.6rem;  
+}
 
-.box {flex: 1; width: calc(100% - 4rem); display: flex; flex-direction: column; gap: 1rem;}
+.image { position: relative; height: 4rem; width: 4rem; flex: 0 0 4rem; border-radius: 999rem; overflow: hidden; }
+
+.box {flex: 1; width: calc(100% - 5rem); display: flex; flex-direction: column; gap: 1rem;}
 
 .button {
   display: flex;
