refactor : 컴포넌트를 주제별로 모아 사용 및 sicilian 버전 업 등

--- a/src/components/clickable/Clickable.module.css
+++ b/src/components/clickable/Clickable.module.css
@@ -8,6 +8,14 @@
   text-align: center;
 }
 
+.container {
+  display: flex;
+  gap: 0.8rem;
+
+  & button {
+    flex: 1;
+  }
+}
 
 /* size */
 .small {
@@ -28,14 +36,6 @@
   padding: 1.6rem 2rem;
 }
 
-.doubleButton {
-  display: flex;
-  gap: 0.8rem;
-
-  & button {
-    flex: 1;
-  }
-}
 
 /* color */
 
@@ -67,8 +67,4 @@
 .borderless {
   padding: 0;
   border: 0;
-
-  &:hover{
-    color: var(--brown-40);
-  }
 }
