--- a/src/components/clickable/SearchOptionButton.module.css
+++ b/src/components/clickable/SearchOptionButton.module.css
@@ -1,9 +1,4 @@
-.root {
-  width: fit-content;
-  position: relative;
-  align-self: flex-end;
-}
-
 .optionButton {
-  font-size: 1.6rem;
+  display: flex;
+  flex-direction: row-reverse;
 }
