--- a/src/components/forms/Form.module.css
+++ b/src/components/forms/Form.module.css
@@ -65,3 +65,36 @@
     }
   }
 }
+
+.inputImage {
+  display: block;
+  overflow: hidden;
+  background-color: var(--gray-50);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  width: 100%;
+  height: 100%;
+
+  border-radius: 1.2rem;
+
+  & input {
+    display: none;
+  }
+
+  & .hoverCover {
+    width: 100%;
+    height: 100%;
+    display: none;
+    background: rgba(0, 0, 0, 0.5);
+  }
+
+  &:hover .hoverCover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
+    font-size: 1.6rem;
+  }
+}
