--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -62,3 +62,26 @@
   width: 6.7rem;
   height: 2.4rem;
 }
+
+.profileImagePopUp {
+  width: 3.2rem;
+  height: 3.2rem;
+  font-size: 3.2rem;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid var(--gray-20);
+
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & img {
+    object-fit: cover;
+  }
+
+  @media (max-width: 768px) {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+}
