--- a/src/components/heroSec/HeroSec.module.css
+++ b/src/components/heroSec/HeroSec.module.css
@@ -1,10 +1,47 @@
+.root {
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
+  padding-top: 5rem;
+
+  @media (max-width: 768px) {
+    gap: 4rem;
+  }
+}
+
+
+.EyeCatch {
+  position: relative;
+  max-width: 720px;
+  height: 24rem;
+  width: 90%;
+  overflow: hidden;
+  margin: 0 auto;
+
+  @media (max-width: 786px) {
+    height: 30vw;
+  }
+
+  & > img {
+    object-fit: contain;
+  }
+}
+
+.carousels {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+
+/* 이하 editorsPick 관련 css */
 .editorsPickContainer {
   container: editorsPickContainer / inline-size;
   width: 100%;
   padding: 0 1.6rem;
 }
 
-.root {
+.editorsPick {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -16,17 +53,17 @@
   background-color: var(--brown-10);
 }
 
-.editorsPick {
+.editorsPickImage {
   width: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  & > img {
+    width: 25rem;
+    height: 10rem;}
 }
 
-.image {
-  width: 25rem;
-  height: 10rem;
-}
 
 .link {
   display: block;
@@ -82,7 +119,7 @@
 }
 
 @container editorsPickContainer (min-width: 801px) {
-  .editorsPick {
+  .editorsPickImage {
     background-image: url("/images/editorsPick2.png");
     background-size: cover;
     background-position: top;
@@ -104,16 +141,16 @@
     background-repeat: no-repeat;
   }
 
-  .editorsPick {
+  .editorsPickImage {
     width: 100%;
     position: relative;
     top: 3rem;
     z-index: 1;
-  }
 
-  .image {
-    width: 20rem;
-    height: 8rem;
+    & > img {
+      width: 20rem;
+      height: 8rem;
+    }
   }
 
   .link {
@@ -141,15 +178,15 @@
     background-size: contain;
   }
 
-  .editorsPick {
+  .editorsPickImage {
     width: 100%;
     position: relative;
     top: 2rem;
     z-index: 1;
-  }
 
-  .image {
-    width: 15rem;
-    height: 6rem;
+    & > img {
+      width: 15rem;
+      height: 6rem;
+    }
   }
 }
