--- a/src/components/forms/Form.module.css
+++ b/src/components/forms/Form.module.css
@@ -10,9 +10,14 @@
 
 .tagInputWrapper {
   display: flex;
-  gap: 0.4rem;
+  gap: 0.8rem;
   align-items: "center";
   flex-wrap: wrap;
+
+  & > span {
+    display: flex;
+    gap: 0.4rem;
+    align-items: "center";}
 }
 
 .tagBox {
