--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -33,6 +33,8 @@
 .headerRightBox {
   flex: 1;
   display: flex;
+  align-items: center;
+  gap: 1.2rem;
   flex-direction: row-reverse;
 }
 
@@ -62,6 +64,46 @@
   width: 6.7rem;
   height: 2.4rem;
 }
+
+.notificationRoot {
+  position: relative;
+
+  & > .redDot {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.2rem;
+    width: 0.6rem;
+    height: 0.6rem;
+    border-radius: 50%;
+    background: red;
+    z-index: 1;
+    display: none;
+  }
+
+  & > .redDot.show {
+    display: block;
+  }
+
+  & .bell {
+    padding-top: 0.4rem;
+  }
+
+  & .notificationList {
+  max-height: 30rem;
+  width: 25rem;
+  overflow-y: scroll;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.8rem;
+  padding: 0.4rem;
+  border-radius: 0.4rem;
+
+  & > :hover {
+    background-color: var(--gray-10);
+  }
+  }
+}
+
 
 .profileImagePopUp {
   width: 3.2rem;
