--- a/src/components/popUp/PopUp.module.css
+++ b/src/components/popUp/PopUp.module.css
@@ -38,6 +38,11 @@
   border-radius: 0.4rem;
 }
 
+.notificationProfileImage {
+  position: relative;
+  overflow: hidden;
+}
+
 .notification {
   flex: 1;
   text-align: left;
