fix : 스타일 수정

--- a/src/components/popUp/PopUp.module.css
+++ b/src/components/popUp/PopUp.module.css
@@ -41,6 +41,9 @@
 .notificationProfileImage {
   position: relative;
   overflow: hidden;
+  width: 2.4rem;
+  height: 2.4rem;
+  border-radius: 50%;
 }
 
 .notification {
