--- a/src/styles/Sign.module.css
+++ b/src/styles/Sign.module.css
@@ -11,6 +11,9 @@
   }
 }
 
+
+
+
 .form {
   display: flex;
   flex-direction: column;
@@ -39,4 +42,19 @@
   color: var(--brown-40);
   font-weight: 700;
   text-decoration: none;
+}
+
+
+.errorTitle {
+  text-align: center;
+  white-space: pre-line;
+  font-weight: 900;
+  font-size: 2.4rem;
+}
+
+.errorExplanation {
+  text-align: center;
+  white-space: pre-line;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
