style : 리뷰 스타일 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,3 +64,11 @@ svg {
     flex: 1;
   }
 }
+
+.wmde-markdown p {
+  margin: 0 !important;
+}
+
+.wmde-markdown li+li {
+  margin-top: 0 !important;
+}
