--- a/src/components/report/Report.module.css
+++ b/src/components/report/Report.module.css
@@ -2,7 +2,7 @@
   font-size: 1.6rem;
   margin-top: 8rem;
   line-height: 1.8;
-  white-space: pre-wrap;
+  /* white-space: pre-wrap; */
   background-color: transparent;
 
   & * {
