--- a/src/components/comment/Comment.module.css
+++ b/src/components/comment/Comment.module.css
@@ -46,6 +46,7 @@
   margin-left: 5rem;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 
   & > .replyButton {margin-left: 0; margin-bottom: 2rem; width: fit-content;}
 }
