--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,7 @@ svg {
 
 .slick-prev:before,
 .slick-next:before {
-  color: var(--brown-70);
+  color: var(--brown-70) !important;
 }
 
 .slick-initialized .slick-slide {
