--- a/src/components/carousel/Carousel.module.css
+++ b/src/components/carousel/Carousel.module.css
@@ -1,6 +1,9 @@
 .root {
   width: 109.4rem;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   @media (max-width: 1400px) {
     width: calc(100% - 10rem);
