--- a/src/components/carousel/Carousel.module.css
+++ b/src/components/carousel/Carousel.module.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   gap: 1rem;
 
+  padding: 0 1rem;
+
   @media (max-width: 1400px) {
     width: calc(100% - 10rem);
   }
@@ -47,4 +49,41 @@
   & > div:last-child {
     margin-right: 1rem;
   }
+}
+
+
+
+
+.sliderWrapper {
+  position: relative;
+}
+
+
+.navButton {
+  position: absolute;
+  top: 45%;
+  transform: translateY(-45%);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  & > svg {
+    width: 3rem;
+    height: 3rem;
+    color: var(--brown-70);
+  }
+}
+
+.prev {
+  left: -4rem;
+}
+
+.next {
+  right: -4rem;
 }
