--- a/src/components/layoutWrapper/sideMenu/SideMenu.module.css
+++ b/src/components/layoutWrapper/sideMenu/SideMenu.module.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 3.6rem;
+  height: 100%;
 
   & > :is(button, a) {
     color: var(--brown-70);
